Yet another fix to deal with overflowing URLs.
If a URL is very long, it overflows the URL bar. We need the URL bar
to stay within a certain width, rather than expand to accomodate the
URL.

Overflow: hidden is causing the autocomplete dropdown to disappear.

This fix, instead, sets a fixed width relative to the viewport size.
That width will have to be recalculated each time buttons are added
to the navbar. C'est la vie.

--- a/app/stylesheets/shell-window/toolbar-input-group.less
+++ b/app/stylesheets/shell-window/toolbar-input-group.less
@@ -1,7 +1,10 @@
 .toolbar-input-group {
   flex: 1;
   display: flex;
+
+  width: calc(100vw - 154px); // so that long URLs dont overflow
   position: relative; // for the :after el, and autocomplete dropdown, to position off of
+
   height: 29px;
   border: 1px solid #bbb;
   border-radius: 2px;
@@ -9,7 +12,6 @@
   -webkit-app-region: no-drag;
   background: #fff;
   margin: 0 2px 0 5px;
-  overflow: hidden;
 
   input[type=text] {
     flex: 1;
